@@ -103,6 +103,9 @@ enum grub_ieee1275_flag
 
   /* OpenFirmware hangs on qemu if one requests any memory below 1.5 MiB.  */
   GRUB_IEEE1275_FLAG_NO_PRE1_5M_CLAIM,
+
+  /* OLPC / XO firmware has the cursor ON/OFF routines.  */
+  GRUB_IEEE1275_FLAG_HAS_CURSORONOFF,
 };
 
 extern int EXPORT_FUNC(grub_ieee1275_test_flag) (enum grub_ieee1275_flag flag);
